--- a/cpp/fft/Makefile
+++ b/cpp/fft/Makefile
@@ -1,2 +1,2 @@
 all:*.cpp
-	g++ -O3 -Wall CochlearModel_1D_fft.cpp -o CochlearModel_1D_fft -I /usr/local/OpenBLAS/include/openblas -L/usr/local/OpenBLAS/lib -lopenblas -lpthread -llapack -lfftw3_threads -lfftw3 --std=c++11
+	clang++ -O3 -Wall CochlearModel_1D_fft.cpp -o CochlearModel_1D_fft -I/opt/homebrew/include -L/opt/homebrew/lib -lfftw3 -lm
